[package]
name = "kvstore"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tonic = "0.9" # gRPC library for Rust
prost = "0.11" # Protobuf support
rust-rocksdb = "0.33.0"
tokio = { version = "1", features = ["full"] } # Async runtime

[build-dependencies]
bindgen = "0.64" # fix mac issues with C/C++ binding
tonic-build = "0.9"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"
